@@ -3,7 +3,7 @@
 #
 #   Makefile for the CUPS PPD Compiler.
 #
-#   Copyright 2007-2010 by Apple Inc.
+#   Copyright 2007-2011 by Apple Inc.
 #   Copyright 2002-2006 by Easy Software Products.
 #
 #   These coded instructions, statements, and computer programs are the
@@ -294,7 +294,7 @@ ppdi-static:		ppdc-static ppdi.o libcupsppdc.a  ../cups/$(LIBCUPSSTATIC)
 	./ppdc-static -I ../data sample.drv
 	./ppdi-static -I ../data -o sample-import.drv ppd/*
 	./ppdc-static -I ../data -d ppd2 sample-import.drv
-	if diff -qr ppd ppd2; then \
+	if diff -r ppd ppd2 >/dev/null; then \
 		echo PPD import OK; \
 	else \
 		echo PPD import FAILED; \
